Actualización de datos profesionales

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,13 +1,13 @@
  <div class="education-container container-block">
-<h2 class="container-block-title">Education</h2>
+<h2 class="container-block-title">Educación</h2>
 <div class="item">
-    <h4 class="degree">MSc in Computer Science</h4>
-    <h5 class="meta">University of London</h5>
-    <div class="time">2011 - 2012</div>
+    <h4 class="degree">Ing. en Sistemas Computacionales, especialidad en Base de Datos.</h4>
+    <h5 class="meta">Instituto Tecnologico de Toluca</h5>
+    <div class="time">2002 - 2007</div>
 </div><!--//item-->
 <div class="item">
-    <h4 class="degree">BSc in Applied Mathematics</h4>
-    <h5 class="meta">Bristol University</h5>
-    <div class="time">2007 - 2011</div>
+    <h4 class="degree">Técnico Fisico Matematico, especialidad en computación.</h4>
+    <h5 class="meta">CETis 117</h5>
+    <div class="time">1999 - 2001</div>
 </div><!--//item-->
 </div><!--//education-container-->
