--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,8 +1,9 @@
 <div class="interests-container container-block">
-<h2 class="container-block-title">Interests</h2>
+<h2 class="container-block-title">Pasatiempos</h2>
 <ul class="list-unstyled interests-list">
-<li>Climbing</li>
-<li>Snowboarding</li>
-<li>Cooking</li>
+<li>Lectura</li>
+<li>Calistenia Running</li>
+<li>Futbol Soccer</li>
+<li>Series de TV</li>
 </ul>
 </div><!--//interests-->
