--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,5 +1,5 @@
 <section class="skills-section section">
-                <h2 class="section-title"><i class="fa fa-rocket"></i>Areas de experiencia &amp; Habilidades</h2>
+                <h2 class="section-title"><i class="fa fa-rocket"></i>Areas de experiencia y habilidades</h2>
                 <div class="skillset">
                     <div class="item">
                         <h3 class="level-title">Java &amp; J2EE</h3>
