Actualización experiencia profesional

--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,6 +1,7 @@
 <section class="section summary-section">
-<h2 class="section-title"><i class="fa fa-user"></i>Perfil Profesional</h2>
+<h2 class="section-title"><i class="fa fa-user"></i>Sobre mi</h2>
 <div class="summary">
-    <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+    <p>Programador Java, profesionalmente desde el año 2007. Concluí mis estudio como Ing. en Sistemas Computacionales en el Instituto Tecnológico de Toluca, con una especialidad en Base de Datos.</p>
+    <p>Me considero una persona pragmática, que le gusta estar en constante aprendizaje. En mi nuevo rol como líder técnico trato de ser ese líder que me hubiera gustado tener, orientando y apoyando a mis colaboradores.</p>
 </div><!--//summary-->
 </section><!--//section-->
