--- a/_includes/education.html
+++ b/_includes/education.html
@@ -6,8 +6,8 @@
     <div class="time">2002 - 2007</div>
 </div><!--//item-->
 <div class="item">
-    <h4 class="degree">Técnico Fisico Matematico, especialidad en computación.</h4>
-    <h5 class="meta">CETis 117</h5>
+    <h4 class="degree">Técnico Físico Matematico, especialidad en Computación.</h4>
+    <h5 class="meta">CETIS 117</h5>
     <div class="time">1999 - 2001</div>
 </div><!--//item-->
 </div><!--//education-container-->
