--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -4,14 +4,14 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Lider técnico</h3>
+                            <h3 class="job-title">Líder Técnico</h3>
                             <div class="time">2013 - Presente</div>
                         </div><!--//upper-row-->
-                        <div class="company">Total System Services de México, Toluca Edo. de México, México.</div>
+                        <div class="company">TSYS México, Toluca Edo. de México, México.</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+                        <p>Fui contratado inicialmente para el rediseño del motor de timbrado para el área de CFDI 3.2, actualmente me desempeño como líder técnico para los desarrollos del área de portales.</p>
+                        <p>Tecnologias aplicadas: Spring Framework, IoC, Boot, Data JPA, Security, MVC, WS, SOAP/REST, Angularjs, Angular Material, Akka</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -19,7 +19,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Programador - Java Sr</h3>
-                            <div class="time">2010 - 2013</div>
+                            <div class="time">2011 - 2013</div>
                         </div><!--//upper-row-->
                         <div class="company">AdeA México, Toluca Edo. de México, México.</div>
                     </div><!--//meta-->
@@ -33,7 +33,20 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Programador - Java Jr</h3>
-                            <div class="time">2008 - 2010</div>
+                            <div class="time">2009 - 2010</div>
+                        </div><!--//upper-row-->
+                        <div class="company">DSI Software, Toluca Edo. de México, México.</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Programador - Java Jr</h3>
+                            <div class="time">2007 - 2009</div>
                         </div><!--//upper-row-->
                         <div class="company">DSI Software, Toluca Edo. de México, México.</div>
                     </div><!--//meta-->
