--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,41 +1,8 @@
 <section class="skills-section section">
-                <h2 class="section-title"><i class="fa fa-rocket"></i>Areas de experiencia y habilidades</h2>
+                <h2 class="section-title"><i class="fa fa-rocket"></i>Áreas de experiencia</h2>
                 <div class="skillset">
                     <div class="item">
-                        <h3 class="level-title">Java &amp; J2EE</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">JSF &amp; PrimeFaces &amp; RichFaces</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">Spring Framework &amp; CORE(IoC) &amp; MVC &amp; Data &amp; Security &amp; WS &amp; REST Controller</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-
-                    <div class="item">
-                        <h3 class="level-title">Javascript &amp; Angularjs</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">HTML5 &amp; CSS (BootStrap)</h3>
+                        <h3 class="level-title">J2EE &amp; JSF2</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="95%">
                             </div>
@@ -43,9 +10,58 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Build &amp; Apache Maven</h3>
+                        <h3 class="level-title">PrimeFaces &amp; RichFaces</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="60%">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+                  
+                    <div class="item">
+                        <h3 class="level-title">WS - SOAP &amp; REST</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Spring Framework &amp; MVC &amp; Security &amp; DataJPA</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Akka</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="70%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+
+                    <div class="item">
+                        <h3 class="level-title">Angularjs</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="80%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">HTML5 &amp; CSS3</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="80%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Apache Maven</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
