Actualización de datos personales

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -24,8 +24,7 @@
                         <div class="company">AdeA México, Toluca Edo. de México, México.</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-
+                        <p>Desarrollo de aplicacion de escritorio y web utilizando Spring Framework, JSF2, Primefaces y Hibernate</p>                        
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -38,20 +37,7 @@
                         <div class="company">DSI Software, Toluca Edo. de México, México.</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-                    </div><!--//details-->
-                </div><!--//item-->
-
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Programador - Java Jr</h3>
-                            <div class="time">2007 - 2009</div>
-                        </div><!--//upper-row-->
-                        <div class="company">DSI Software, Toluca Edo. de México, México.</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                        <p>Programación con Java 5 y MySQL</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
