--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,8 +1,10 @@
 <div class="interests-container container-block">
 <h2 class="container-block-title">Pasatiempos</h2>
 <ul class="list-unstyled interests-list">
-<li>Lectura</li>
-<li>Calistenia Running</li>
+<li>Lectura: Isaac Asimov, Franz Kafka, Stephen King</li>
+<li>Filosofia: Diógenes de Sinope</li>
+<li>Calistenia</li>
+<li>Running</li>
 <li>Futbol Soccer</li>
 <li>Series de TV</li>
 </ul>
