--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,9 +1,9 @@
 <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Proyectos</h2>
                 <div class="intro">
-                    <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
+                    <p>Traigo varias ideas en la cabeza que no he logrado concretar por falta de disciplina.</p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="#hook">VIERA - CODE</a></span> - <span class="project-tagline">Codigo Viera.</span>
+                    <span class="project-title"><a href="https://garrobo-software.com.mx">Garrobo Software</a></span> - <span class="project-tagline">SCASI</span>
                 </div><!--//item-->
 </section><!--//section-->
