Actualización de skills

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -10,8 +10,7 @@
                         <div class="company">TSYS México, Toluca Edo. de México, México.</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Fui contratado inicialmente para el rediseño del motor de timbrado para el área de CFDI 3.2, actualmente me desempeño como líder técnico para los desarrollos del área de portales.</p>
-                        <p>Tecnologias aplicadas: Spring Framework, IoC, Boot, Data JPA, Security, MVC, WS, SOAP/REST, Angularjs, Angular Material, Akka</p>
+                        <p>Tecnologias aplicadas: Java 6, Java7, Spring Framework, Spring-Boot, Spring-Data JPA, Spring-Security, Spring-MVC, Web Services, SOAP/REST, Angularjs, Angular Material, Akka, Oracle SQL</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -24,7 +23,7 @@
                         <div class="company">AdeA México, Toluca Edo. de México, México.</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Desarrollo de aplicacion de escritorio y web utilizando Spring Framework, JSF2, Primefaces y Hibernate</p>                        
+                        <p>Tecnologias aplicadas: Java 5, Spring Framework, JSF2, Primefaces,  Hibernate, Oracle SQL</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -37,7 +36,7 @@
                         <div class="company">DSI Software, Toluca Edo. de México, México.</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Programación con Java 5 y MySQL</p>
+                        <p>Tecnologias aplicadas: Java 4 y MySQL SQL</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
