--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,9 +2,9 @@
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Áreas de experiencia</h2>
                 <div class="skillset">
                     <div class="item">
-                        <h3 class="level-title">J2EE &amp; JSF2</h3>
+                        <h3 class="level-title">JSE &amp; JSF2</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
+                            <div class="level-bar-inner" data-level="90%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
@@ -16,9 +16,9 @@
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
-                  
+
                     <div class="item">
-                        <h3 class="level-title">WS - SOAP &amp; REST</h3>
+                        <h3 class="level-title">Web Services - SOAP &amp; REST</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="90%">
                             </div>
@@ -34,13 +34,44 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Akka</h3>
+                        <h3 class="level-title">HTML5</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="85%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">JavaScript</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="70%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
 
+                    <div class="item">
+                        <h3 class="level-title">CSS3</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="70%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Bootstrap</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Akka</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="70%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
 
                     <div class="item">
                         <h3 class="level-title">Angularjs</h3>
@@ -51,17 +82,9 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">HTML5 &amp; CSS3</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
                         <h3 class="level-title">Apache Maven</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
+                            <div class="level-bar-inner" data-level="85%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
