--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
                     {% if site.phone %}
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:{{site.phone}}">{{site.phone}}</a></li>
                     {% else %}
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:012 345 6789">722 290 7281</a></li>
+                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:012 345 6789">XXX XXX XXXX</a></li>
                     {% endif %}
 
                     {% if site.website %}
@@ -38,7 +38,7 @@
                     {% if site.github %}
                     <li class="github"><i class="fa fa-github"></i><a href="http://github.com/{{site.github}}" target="_blank">github.com/{{site.github}}</a></li>
                     {% else %}
-                    <li class="github"><i class="fa fa-github"></i><a href="http://github.com/sharu725" target="_blank">github.com/sharu725</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="http://github.com/jviera" target="_blank">github.com/jviera</a></li>
                     {% endif %}
 
                     {% if site.twitter %}
