--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -2,6 +2,6 @@
 <h2 class="section-title"><i class="fa fa-user"></i>Sobre mi</h2>
 <div class="summary">
     <p>Programador Java, profesionalmente desde el año 2007. Concluí mis estudio como Ing. en Sistemas Computacionales en el Instituto Tecnológico de Toluca, con una especialidad en Base de Datos.</p>
-    <p>Me considero una persona pragmática, que le gusta estar en constante aprendizaje.</p>
+    <p>Siempre buscando mejores formas para desarrollar Software.</p>
 </div><!--//summary-->
 </section><!--//section-->
