--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -5,7 +5,20 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Líder Técnico</h3>
-                            <div class="time">2013 - Presente</div>
+                            <div class="time">2016 - Presente</div>
+                        </div><!--//upper-row-->
+                        <div class="company">TSYS México, Toluca Edo. de México, México.</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Tecnologias aplicadas: Git, Apache JMeter, Selenium, SonarQube, Jenkins, y Acunetix</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Programador - Java Sr (especialista CFDI v3.2)</h3>
+                            <div class="time">2013 - 2016</div>
                         </div><!--//upper-row-->
                         <div class="company">TSYS México, Toluca Edo. de México, México.</div>
                     </div><!--//meta-->
