--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,10 +1,51 @@
 <section class="skills-section section">
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Áreas de experiencia</h2>
                 <div class="skillset">
+
                     <div class="item">
-                        <h3 class="level-title">JSE &amp; JSF2</h3>
+                        <h3 class="level-title">CI/CD &amp; Jenkins </h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="85%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">TDD  &amp; Junit</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">GIT</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="95%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Messaging &amp; RabbitMQ</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="80%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">SonarQube</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="85%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Apache JMeter</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="85%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
