--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,7 +14,7 @@
                    {% if site.email %}
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: {{site.email}}">{{site.email}}</a></li>
                     {% else %}
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto:alan.doe@website.com">jviera.dev@gmail.com</a></li>
+                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto:alan.doe@website.com">jb.viera@gmail.com</a></li>
                     {% endif %}
 
                     {% if site.phone %}
@@ -26,7 +26,7 @@
                     {% if site.website %}
                     <li class="website"><i class="fa fa-globe"></i><a href="http://{{site.website}}" target="_blank">{{site.website}}</a></li>
                     {% else %}
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://blog.webjeda.com" target="_blank">blog.webjeda.com</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="https://viera-code.github.io" target="_blank">viera code</a></li>
                     {% endif %}
 
                     {% if site.linkedin %}
@@ -44,7 +44,7 @@
                     {% if site.twitter %}
                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/{{site.twitter}}" target="_blank">{{site.twitter}}</a></li>
                     {% else %}
-                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/@webjeda" target="_blank">@webjeda</a></li>
+                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/jvieradev" target="_blank">@jvieradev</a></li>
                     {% endif %}
 
                 </ul>
