--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,26 +1,26 @@
- <div class="education-container container-block">
-<h2 class="container-block-title">Educación</h2>
+<div class="education-container container-block">
+    <h2 class="container-block-title">Educación</h2>
 
-<div class="item">
-    <h4 class="degree">Seguridad en Aplicaciones Java WEB (JEE) OWASP</h4>
-    <!--h5 class="meta">Instituto Tecnologico de Toluca</h5-->
-    <div class="time">Mayo 2017</div-->
-</div>
+    <div class="item">
+        <h4 class="degree">Seguridad en Aplicaciones Java WEB (JEE) OWASP</h4>
+        <h5 class="meta"></h5>
+        <div class="time">Mayo 2017</div>
+    </div>
 
-<div class="item">
-    <h4 class="degree">Desarrollo profesional con Spring Framework 3</h4>
-    <h5 class="meta">SynergyJ</h5>
-    <div class="time">Marzo 2010</div>
-</div>
+    <div class="item">
+        <h4 class="degree">Desarrollo profesional con Spring Framework 3</h4>
+        <h5 class="meta">SynergyJ</h5>
+        <div class="time">Marzo 2010</div>
+    </div>
 
-<div class="item">
-    <h4 class="degree">Ing. en Sistemas Computacionales, especialidad en Base de Datos.</h4>
-    <h5 class="meta">Instituto Tecnológico de Toluca</h5>
-    <div class="time">2002 - 2007</div>
-</div>
-<div class="item">
-    <h4 class="degree">Técnico en Computación</h4>
-    <h5 class="meta">CENTRO DE ESTUDIOS TECNOLOGICOS industrial y de servicios 117</h5>
-    <div class="time">1999 - 2001</div>
-</div>
+    <div class="item">
+        <h4 class="degree">Ing. en Sistemas Computacionales, especialidad en Base de Datos.</h4>
+        <h5 class="meta">Instituto Tecnológico de Toluca</h5>
+        <div class="time">2002 - 2007</div>
+    </div>
+    <div class="item">
+        <h4 class="degree">Técnico en Computación</h4>
+        <h5 class="meta">CENTRO DE ESTUDIOS TECNOLOGICOS industrial y de servicios 117</h5>
+        <div class="time">1999 - 2001</div>
+    </div>
 </div>
