--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,7 +1,8 @@
 <section class="section summary-section">
-<h2 class="section-title"><i class="fa fa-user"></i>Sobre mi</h2>
-<div class="summary">
-    <p>Programador Java, profesionalmente desde el año 2007. Concluí mis estudio como Ing. en Sistemas Computacionales en el Instituto Tecnológico de Toluca, con una especialidad en Base de Datos.</p>
-    <p>Siempre buscando mejores formas para desarrollar Software.</p>
-</div><!--//summary-->
-</section><!--//section-->
+    <h2 class="section-title"><i class="fa fa-user"></i>Sobre mi</h2>
+    <div class="summary">
+        <p>Soy un apasionado de la tecnologica, resolver problemas me motiva</p>
+        <p>Agnostico</p>
+        <p>Prágmatico</p>        
+    </div>
+</section>
