--- a/_includes/education.html
+++ b/_includes/education.html
@@ -20,7 +20,7 @@
     </div>
     <div class="item">
         <h4 class="degree">Técnico en Computación</h4>
-        <h5 class="meta">CENTRO DE ESTUDIOS TECNOLOGICOS industrial y de servicios 117</h5>
+        <h5 class="meta">CETis 117</h5>
         <div class="time">1999 - 2001</div>
     </div>
 </div>
