--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -11,7 +11,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">TDD  &amp; Junit</h3>
+                        <h3 class="level-title">TDD &amp; Junit</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="90%">
                             </div>
@@ -67,45 +67,13 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Spring Framework &amp; MVC &amp; Security &amp; DataJPA</h3>
+                        <h3 class="level-title">Spring Framework &amp; MVC &amp; Security &amp; DataJPA &amp; Batch</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="90%">
                             </div>
                         </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">HTML5</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">JavaScript</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="70%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">CSS3</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="70%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">Bootstrap</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
+                    </div><!--//item-->                   
+                  
                     <div class="item">
                         <h3 class="level-title">Akka</h3>
                         <div class="level-bar">
@@ -113,15 +81,7 @@
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">Angularjs</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
+                   
                     <div class="item">
                         <h3 class="level-title">Apache Maven</h3>
                         <div class="level-bar">
