--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,9 +1,9 @@
 <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Proyectos</h2>
                 <div class="intro">
-                    <p>Blog personal, donde escribo sobre productividad, metodologias de desarrollo y seguridad.</p>
+                    <p></p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="https://viera-code.github.io/">viera code</a></span> - <span class="project-tagline">viera code</span>
+                    <span class="project-title"><a href="https://viera-code.github.io/">viera code</a></span> - <span class="project-tagline">Blog personal, donde escribo sobre productividad, metodologias de desarrollo y seguridad.</span>
                 </div><!--//item-->
 </section><!--//section-->
