--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,10 +1,11 @@
 <div class="interests-container container-block">
-<h2 class="container-block-title">Pasatiempos</h2>
+<h2 class="container-block-title">Intereses</h2>
 <ul class="list-unstyled interests-list">
 <li>Lectura</li>
 <li>Filosofia</li>
 <li>Running</li>
+<li>Calistenia</li>
 <li>Futbol Soccer</li>
 <li>Series de TV</li>
 </ul>
-</div><!--//interests-->
+</div>
