--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,8 +1,6 @@
 <section class="section summary-section">
     <h2 class="section-title"><i class="fa fa-user"></i>Sobre mi</h2>
     <div class="summary">
-        <p>Soy un apasionado de la tecnologica, resolver problemas me motiva</p>
-        <p>Agnostico</p>
-        <p>Prágmatico</p>        
+        <p>Soy un desarrollador de Software, apasionado de la tecnologia, aplicar mis conocimientos para resolver problemas me motiva a continuar aprendiendo.</p>        
     </div>
 </section>
