--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,6 +1,7 @@
 <section class="section summary-section">
     <h2 class="section-title"><i class="fa fa-user"></i>Sobre mi</h2>
     <div class="summary">
-        <p>Soy un desarrollador de Software, apasionado de la tecnologia, aplicar mis conocimientos para resolver problemas me motiva a continuar aprendiendo.</p>        
+        <p>Desarrollo Software de manera profesional desde el año 2007, me apasiona la tecnologia y resolver problemas me inspira y mantiene motivado.</p>
+        <p>Considero al autoaprendizaje como el mejor método de educación, ya que este no conoce mas fronteras que tu imaginación.</p>
     </div>
 </section>
