--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,7 +1,7 @@
 <section class="section summary-section">
     <h2 class="section-title"><i class="fa fa-user"></i>Sobre mi</h2>
     <div class="summary">
-        <p>Desarrollador de Software profesional desde el año 2007, me apasiona la tecnología y resolver problemas me inspira y mantiene motivado.</p>
+        <p>Desarrollador de Software profesional desde el año 2007, me apasiona la tecnología, resolver problemas me inspira y mantiene motivado.</p>
         <p>Considero al autoaprendizaje como el mejor método de educación.</p>        
     </div>
 </section>
