--- a/_includes/language.html
+++ b/_includes/language.html
@@ -2,6 +2,6 @@
 <h2 class="container-block-title">Lenguajes</h2>
 <ul class="list-unstyled interests-list">
 <li>Español <span class="lang-desc">(Nativo)</span></li>
-<li>English <span class="lang-desc">(Profesional)</span></li>
+<li>English <span class="lang-desc">(A2 Elemental)</span></li>
 </ul>
 </div><!--//interests-->
