--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,6 +4,6 @@
                     <p></p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="https://viera-code.github.io/">viera code</a></span> - <span class="project-tagline">Blog personal, donde escribo sobre programación, metodologias de desarrollo y seguridad.</span>
+                    <span class="project-title"><a href="https://github.com/jviera/garrobo">Garrobo Project</a></span> - <span class="project-tagline">Aplicación de gestión de servicios e inventario, con cliente WEB y mobile.</span>
                 </div><!--//item-->
 </section><!--//section-->
